<resources>
    <string name="app_name">Foodify</string>

    <string name="action_settings">Settings</string>

    <string name="new_recipe_item">New Recipe item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="edit_recipe_item">Edit Your Recipe</string>
    <string name="are_you_sure_want_to_exit">Are you sure want to exit?</string>

    <string-array name="category_items">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Drink</item>
    </string-array>
</resources>